# xurl

./: AGENTS.md  README.md
docs/: agents-uri-design.md  path-query-uri-design.md  subagent-uri-design.md
skills/xurl/: SKILL.md
xurl-cli/src/: main.rs
xurl-cli/tests/: cli.rs
xurl-core/: Cargo.toml
xurl-core/src/: lib.rs  model.rs  render.rs  service.rs  uri.rs
xurl-core/src/provider/: kimi.rs  mod.rs
