[package]
name = "xurl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core library for resolving and rendering AI agent URLs"
documentation = "https://docs.rs/xurl-core"
readme = "../README.md"
keywords = ["agent", "url", "codex", "claude", "gemini"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
dirs = "6.0.0"
grep = "0.4.1"
md-5 = "0.10.6"
once_cell = "1.21.3"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.8"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
